--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "10_break_and_continue_statements_second_tutorial": "c"
+        "10_break_and_continue_statements_second_tutorial": "c",
+        "random": "c",
+        "stdio.h": "c",
+        "algorithm": "c"
     }
 }
