--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "array": "c",
         "string_view": "c",
         "initializer_list": "c",
-        "cstdio": "c"
+        "cstdio": "c",
+        "25_malloc_vs_calloc_differences_explained_second_tutorial": "c",
+        "stdlib.h": "c"
     }
 }
