--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "initializer_list": "c",
         "cstdio": "c",
         "25_malloc_vs_calloc_differences_explained_second_tutorial": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "functional": "c"
     }
 }
