.vscode/settings.json:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "functional": "c",
         "unistd.h": "c",
         "time.h": "c",
-        "_mingw_mac.h": "c"
+        "_mingw_mac.h": "c",
+        "cerrno": "c"
     }
 }
