--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "unistd.h": "c",
         "time.h": "c",
         "_mingw_mac.h": "c",
-        "cerrno": "c"
+        "cerrno": "c",
+        "math.h": "c"
     }
 }
