.vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
         "vector": "c",
         "type_traits": "c",
         "library.h": "c"
-    }
+    },
+    "audioCues.lineHasError": "off"
 }
