--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "string": "c",
         "vector": "c",
         "type_traits": "c",
-        "library.h": "c"
+        "library.h": "c",
+        "bank.h": "c"
     },
     "audioCues.lineHasError": "off"
 }
